# onvif

./: CMakeLists.txt  README.md  main.cpp
lib/: libeay32.lib  ssleay32.lib
onvif/: CMakeLists.txt  DeviceBinding.nsmap  errorlog.h  soapAccessRulesBindingProxy.cpp  soapAccessRulesBindingProxy.h  soapAccessRulesBindingService.cpp  soapAccessRulesBindingService.h  soapActionEngineBindingProxy.cpp  soapActionEngineBindingProxy.h  soapActionEngineBindingService.cpp  soapActionEngineBindingService.h  soapAdvancedSecurityServiceBindingProxy.cpp  soapAdvancedSecurityServiceBindingProxy.h  soapAdvancedSecurityServiceBindingService.cpp  soapAdvancedSecurityServiceBindingService.h  soapAnalyticsDeviceBindingProxy.cpp  soapAnalyticsDeviceBindingProxy.h  soapAnalyticsDeviceBindingService.cpp  soapAnalyticsDeviceBindingService.h  soapAnalyticsEngineBindingProxy.cpp  soapAnalyticsEngineBindingProxy.h  soapAnalyticsEngineBindingService.cpp  soapAnalyticsEngineBindingService.h  soapAuthenticationBehaviorBindingProxy.cpp  soapAuthenticationBehaviorBindingProxy.h  soapAuthenticationBehaviorBindingService.cpp  soapAuthenticationBehaviorBindingService.h  soapCreatePullPointBindingProxy.cpp  soapCreatePullPointBindingProxy.h  soapCreatePullPointBindingService.cpp  soapCreatePullPointBindingService.h  soapCredentialBindingProxy.cpp  soapCredentialBindingProxy.h  soapCredentialBindingService.cpp  soapCredentialBindingService.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceBindingService.cpp  soapDeviceBindingService.h  soapDeviceIOBindingProxy.cpp  (+103 more)
(+1 files in other folders)
